--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,11 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "shipmate.svg",
+      "type": "image/svg",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
